--- a/templates/community_app/survey.html
+++ b/templates/community_app/survey.html
@@ -10,7 +10,7 @@
         {% for question in questions %}
             <div>
                 <strong>{{ question.text }}</strong><br>
-                {% for choice in question.choices.all %}
+                {% for choice in question.choice_set.all %}
                     <label>
                         <input type="radio" name="{{ question.id }}" value="{{ choice.id }}">
                         {{ choice.text }}
@@ -23,3 +23,4 @@
     </form>
 </body>
 </html>
+
