Fix: 修正済みのコミットを再push

--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}  {# 共通レイアウトを使わないならこの行は削除OK #}
+{% extends 'base.html' %}  {# 共通レイアウトを使う場合 #}
 
 {% block content %}
   <h2>ユーザー登録</h2>
