--- a/templates/community_app/top.html
+++ b/templates/community_app/top.html
@@ -46,6 +46,10 @@
         <a href="{% url 'survey_page' %}">
             <button>診断スタート</button>
         </a>
+        <br><br>
+        <a href="{% url 'community_list' %}">
+            <button>団体一覧を見る</button>
+        </a>
     </main>
     <footer>
         <p>&copy; 2025 コミュニティ診断プロジェクト</p>
