--- a/templates/community_app/result.html
+++ b/templates/community_app/result.html
@@ -18,5 +18,7 @@
     </ul>
 
     <a href="{% url 'survey_page' %}"><button>もう一度診断する</button></a>
+    <br><br>
+    <a href="{% url 'community_list' %}"><button>団体一覧を見る</button></a>
 </body>
 </html>
